<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/gray_dark"
    tools:context=".CreateNoteFragment">

    <LinearLayout
        android:id="@+id/top_navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_back_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3b3b3b"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:riv_corner_radius="10dip"
            app:riv_mutate_background="true"
            android:layout_gravity="center_vertical"
            app:riv_oval="false"
            android:contentDescription="@string/app_name" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:padding="8dp"
            android:textAllCaps="false"
            android:textSize="18sp" />


    </LinearLayout>


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/title_hint"
        android:textCursorDrawable="@drawable/cursor_white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@android:color/transparent"
        android:textSize="35sp"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/top_navigation_layout"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lines="10"
        android:textCursorDrawable="@drawable/cursor_white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:gravity="top"
        android:maxLines="10"
        android:background="@android:color/transparent"
        android:hint="@string/description_hint"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />




</androidx.constraintlayout.widget.ConstraintLayout>